<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/latest_post"/>
        <item
            android:id="@+id/nav_theme_post"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/theme_post"/>
        <item
            android:id="@+id/nav_hot_post"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/hot_post"/>
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_change_theme"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/change_theme"/>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings"/>
        </menu>
    </item>

</menu>
